# Claude-Code

./: .gitignore  Claude.md  README.md  chunk-index-explanation.md  conpass_multilingual_and_absence_risk_instructions.md  poc-changes-from-github.md  ユーザー向け手引書.md  管理者向け手引書.md
conpass-agent-backend/: .cz.toml  .dockerignore  .pre-commit-config.yaml  Dockerfile  prompt-sync-and-prepare-push.md  pyproject.toml  pytest.ini  todo.md
conpass-agent-backend/app/: main.py
conpass-agent-backend/docs/: ABOUT_CONPASS_AI.md  ADDING_CUSTOM_METADATA_GUIDE.md  ADDITIONAL_FLOW_IMPROVEMENTS.md  AGENT_MIGRATION_SUMMARY.md  API_DOCUMENTATION.md  CHAT_HISTORY_ARCHITECTURE.md  CHAT_HISTORY_DOCUMENTATION_REVIEW.md  CHAT_HISTORY_IMPLEMENTATION_CHECKLIST.md  CHAT_HISTORY_IMPLEMENTATION_SUMMARY.md  CONPASS_AGENT.md  CONPASS_BODY_API_DOCUMENTATION.md  CONPASS_SYSTEM_METADATA_CRUD.md  CONTRACT_SYNC_HANDLER_CONTEXT.md  CONTRACT_SYNC_HANDLER_SETUP_GUIDE.md  CSV_GENERATION_TOOL_CONTEXT.md  DOCKER_GUIDE.md  DOCUMENT_DIFFING_TOOL_CONTEXT.md  ENVIRONMENT_FLAGS_AND_GIT_FLOW.md  FILE_UPLOAD_SYSTEM_CONTEXT.md  FILTER_GENERATION_COMPLETE_SUMMARY.md  FILTER_GENERATION_IMPROVEMENTS.md  FIXED_METADATA_UPDATE_GUIDE.md  FUNCTIONALITY_VERIFICATION.md  FUZZY_COMPANY_MATCHING.md  FUZZY_MATCHING_DEPLOYMENT.md  FUZZY_MATCHING_QUICK_START.md  FUZZY_MATCHING_SUMMARY.md  GCS_CDN_CONFIGURATION.md  GCS_CLOUDFRONT_SETUP_GUIDE.md  GOOGLE_DOCUMENT_AI_INTEGRATION_PLAN.md  HYBRID_SEARCH_ANALYSIS.md  INGESTION_PIPELINE_ARCHITECTURE.md  METADATA_CONFIRM_API.md  METADATA_CREATE_FIX.md  METADATA_CRUD_PRODUCTION_REVIEW.md  METADATA_DOC.md  METADATA_SEARCH_FILTER_FIX.md  (+19 more)
(+933 files in other folders)
