[project]
name = "conpass-agent-backend"
version = "0.1.0"
description = "ConPass AI Agent Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "starlette>=0.41.0",

    # Config / environment
    "python-dotenv>=1.0.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.11.0",

    # LlamaIndex core
    "llama-index>=0.12.0",
    "llama-index-llms-openai>=0.4.0",
    "llama-index-llms-google-genai>=0.1.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-embeddings-fastembed>=0.3.0",

    # Vector DB
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",

    # Google Cloud
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.19.0",
    "google-auth>=2.38.0",

    # HTTP
    "httpx>=0.28.0",

    # Auth
    "PyJWT>=2.10.0",

    # Redis
    "redis>=5.2.0",

    # NLP / text
    "tiktoken>=0.9.0",
    "rapidfuzz>=3.11.0",
    "FlagEmbedding>=1.3.0",

    # Image / PDF processing
    "Pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "python-magic>=0.4.27",

    # Database (used by contract_ingest.py)
    "pymysql>=1.1.0",

    # Async utilities
    "aiostream>=0.6.2",
    "numpy>=2.2.0",

    # Observability (optional)
    "langfuse>=2.60.0",
    "openinference-instrumentation-llama-index>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
